# TinyMetalAgent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PLAN.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: README.md  ollama-qwen25-7b-baseline.json  qwen-apple-to-apple-compare.json  qwen-end2end-metal-smoke.json  qwen-end2end-smoke.json  qwen-gguf-q4_0-batched-prefill-gpu-decode-compare.json  qwen-gguf-q4_0-buffer-reuse-compare.json  qwen-gguf-q4_0-gap-optimized-compare.json  qwen-gguf-q4_0-same-quant-compare.json  qwen-phase-benchmark.json
c/: Makefile
c/examples/: generate.c  smoke.c
c/include/: tinyengine.h
c/src/: gguf.c  metal_backend.h  metal_backend.mm  ops.c  qwen.c  tinyengine.c  tinyengine_internal.h  tokenizer.c
c/src/metal/: metal_backend_layers.mm.inc  metal_backend_runtime.mm.inc  metal_kernels.metal.inc
c/tests/: autotune_microkernels.py  benchmark_compare.py  generate_metal_guard_tests.py  kernel_ops.c  oracle_compare.py
crates/tinyagent/: Cargo.toml
crates/tinyagent-backend-llama/: Cargo.toml
crates/tinyagent-backend-llama/src/: lib.rs
crates/tinyagent-backend-metal/: Cargo.toml
crates/tinyagent-backend-metal/src/: lib.rs  qwen_mlx.rs
crates/tinyagent-core/: Cargo.toml
crates/tinyagent-core/src/: backend.rs  lib.rs  manifest.rs  profile.rs  types.rs
crates/tinyagent/src/: main.rs
crates/tma-format/: Cargo.toml
crates/tma-format/src/: lib.rs
docs/: MODELS.md  SAFETY.md
models/manifests/: qwen2.5-3b.json  qwen2.5-coder-1.5b.json
profiles/: mac-8gb.toml
python/tests/: conftest.py  test_agent.py  test_cli.py  test_context.py  test_daemon.py  test_engine.py  test_integration_matrix.py  test_integration_two_sum.py  test_safety.py  test_session.py  test_streaming.py  test_template.py  test_toolcall.py  test_tools_files.py
python/tinyagent/: __init__.py  agent.py  bench.py  cli.py  context.py  daemon.py  engine.py  safety.py  session.py  streaming.py  template.py  toolcall.py
python/tinyagent/tools/: __init__.py  files.py  shell.py  web.py
python/tinyengine/: __init__.py  runtime.py
scripts/: prepare_qwen_model.sh
