[workspace]
members = [
    "crates/tinyagent-backend-metal",
    "crates/tinyagent",
    "crates/tinyagent-backend-llama",
    "crates/tinyagent-core",
    "crates/tma-format",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/local/tiny-metal-agent"
