[package]
name = "tinyagent-backend-llama"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tinyagent-core = { path = "../tinyagent-core" }
tokio = { version = "1", features = ["time"] }
