[package]
name = "tinyagent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tinyagent-backend-metal = { path = "../tinyagent-backend-metal" }
tinyagent-backend-llama = { path = "../tinyagent-backend-llama" }
tinyagent-core = { path = "../tinyagent-core" }
tma-format = { path = "../tma-format" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
